--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,11 +28,11 @@ import background from '../assets/background.svg';
 			<div class="flex justify-between gap-4">
 				<button id="add-1" class="rounded-full bg-green-400 hover:scale-110 transition-all duration-300 opacity-80">
 					<img class="w-12 h-12 block"
-					src="/public/plus.svg" alt="Sumar punto">
+					src="/plus.svg" alt="Sumar punto">
 				</button>
 				<button id="sub-1" class="rounded-full bg-red-400 hover:scale-110 transition-all duration-300 opacity-80">
 					<img class="w-12 h-12 block" 
-					src="/public/minus.svg" alt="Restar punto">
+					src="/minus.svg" alt="Restar punto">
 				</button>
 			</div>
 			<!-- buttons team 2 -->
