--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,8 +36,8 @@ import background from '../assets/background.svg';
 				</button>
 			</div>
 			<!-- buttons team 2 -->
-			<div class="flex justify-between gap-4">
-				<button id="add-2" class="rounded-full bg-green-400 hover:scale-110 transition-all duration-300 opacity-80">
+			<div class="flex justify-between gap-4 text-base">
+				<button id="add-2" class="text-base rounded-full bg-green-400 hover:scale-110 transition-all duration-300 opacity-80">
 					<img class="w-12 h-12 block"
 					src="/plus.svg" alt="Sumar punto">
 				</button>
